--- a/prices.html
+++ b/prices.html
@@ -107,10 +107,8 @@
             <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Click here to buy</a>
         </div>
         <div class="price-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968919.png" alt="Nitro Boost Icon" class="icon"> 
+            <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
             • 3 Nitro Server Boosts
-            <br>
-            <a class="button-link" href="https://discord.com" target="_blank">Click here to buy</a>
         </div>
     </div>
 
