--- a/prices.html
+++ b/prices.html
@@ -109,6 +109,8 @@
         <div class="price-item">
             <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
             • 3 Nitro Server Boosts
+            <br>
+        <a class="button-link" href="https://discord.gg/bgWY2zEV7z" target="_blank">Click here to join server</a>
         </div>
     </div>
 
