--- a/supported.html
+++ b/supported.html
@@ -136,7 +136,7 @@
             <tbody>
                 <tr><td>Hydrogen <span class="question-dot">❓</span></td></tr>
                 <tr><td>Evon <span class="question-dot">❓</span> <a href="https://sakpot.com/android-evon-mobile-executor-roblox-download/">Download</a></td></tr>
-                <tr><td>Acreus X Neo <span class="question-dot">❓</span> <a href="https://spdmteam.com/index?os=android">Download</a></td></tr>
+                <tr><td>Acreus X Neo <span class="question-dot">🟢</span> <a href="https://spdmteam.com/index?os=android">Download</a></td></tr>
                 <tr><td>Codex <span class="green-dot">🟢</span> <a href="https://codex.lol/android">Download</a></td></tr>
                 <tr><td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-mobile">Download</a></td></tr>
                 <tr><td>VegaX <span class="question-dot">❓</span> <a href="https://www.vegax.gg/">Download</a></td></tr>
