--- a/supported.html
+++ b/supported.html
@@ -184,12 +184,12 @@
                 <tr><th>Android Executors</th></tr>
             </thead>
             <tbody>
-                <tr><td>Hydrogen <span class="question-dot">❓</span></td></tr>
-                <tr><td>Evon <span class="question-dot">❓</span> <a href="https://sakpot.com/android-evon-mobile-executor-roblox-download/">Download</a></td></tr>
+                <tr><td>Hydrogen <span class="question-dot">🟢</span></td></tr>
+                <tr><td>Evon <span class="question-dot">🟢</span> <a href="https://sakpot.com/android-evon-mobile-executor-roblox-download/">Download</a></td></tr>
                 <tr><td>Acreus X Neo <span class="question-dot">🟢</span> <a href="https://spdmteam.com/index?os=android">Download</a></td></tr>
                 <tr><td>Codex <span class="green-dot">🟢</span> <a href="https://codex.lol/android">Download</a></td></tr>
                 <tr><td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-mobile">Download</a></td></tr>
-                <tr><td>VegaX <span class="question-dot">❓</span> <a href="https://www.vegax.gg/">Download</a></td></tr>
+                <tr><td>VegaX <span class="question-dot">🟢</span> <a href="https://www.vegax.gg/">Download</a></td></tr>
             </tbody>
         </table>
 
@@ -199,13 +199,15 @@
             </thead>
             <tbody>
                 <tr><td>Seliware <span class="green-dot">🟢</span> <a href="https://seliware.com/">Download</a></td></tr>
-                <tr><td>Xeno <span class="red-dot">🔴</span></td></tr>
+                <tr><td>Xeno <span class="red-dot">🟢</span></td></tr>
                 <tr><td>Wave <span class="green-dot">🟢</span> <a href="https://getwave.gg/">Download</a></td></tr>
                 <tr><td>Synapse z <span class="green-dot">🟢</span> <a href="https://synapsez.net/">Download</a></td></tr>
-                <tr><td>Solara <span class="red-dot">🔴</span> <a href="https://getsolara.dev/">Download</a></td></tr>
-                <tr><td>JJsploit <span class="red-dot">🔴</span> <a href="https://wearedevs.net/dInfo/JJSploit">Download</a></td></tr>
-                <tr><td>Zorara <span class="red-dot">🔴</span> <a href="https://wearedevs.net/d/Zorara">Download</a></td></tr>
-                <tr><td>Celery <span class="question-dot">❓</span></td></tr>
+                <tr><td>Solara <span class="red-dot">🟢</span> <a href="https://getsolara.dev/">Download</a></td></tr>
+                <tr><td>JJsploit <span class="red-dot">🟢</span> <a href="https://wearedevs.net/dInfo/JJSploit">Download</a></td></tr>
+                <tr><td>Zorara <span class="red-dot">🟢</span> <a href="https://wearedevs.net/d/Zorara">Download</a></td></tr>
+                <tr><td>Celery <span class="question-dot">🟢</span></td></tr>
+                <tr><td>Cloudy <span class="question-dot">🟢</span></td></tr>
+                <tr><td>Atlantis <span class="question-dot">🟢</span></td></tr>
             </tbody>
         </table>
 
@@ -225,7 +227,7 @@
                 <tr><th>Mac OS Executors</th></tr>
             </thead>
             <tbody>
-                <tr><td>Macsploit <span class="question-dot">❓</span> <a href="https://abyssdigital.mysellix.io/">Download</a> <a href="https://discord.com/invite/macsploit">Discord</a></td></tr>
+                <tr><td>Macsploit <span class="question-dot">🟢</span> <a href="https://abyssdigital.mysellix.io/">Download</a> <a href="https://discord.com/invite/macsploit">Discord</a></td></tr>
             </tbody>
         </table>
     </section>
